completed integration of xml parser