@@ -1,22 +1,22 @@
 package hotel_management;
 
+import java.io.FileNotFoundException;
 import java.util.Date;
+import java.util.List;
 import java.util.Vector;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 import billing_services.Billing;
-import user_services.Account;
-import user_services.AccountList;
-import user_services.Guest;
-import user_services.UserLoader;
+import file_utilities.XMLList;
+import file_utilities.XMLParser;
+import user_services.*;
 
 public class HotelManagement {
     private static final int NUMBER_OF_ROOMS = 40;
     private static HotelManagement hotelManagement = null;
 
-    private ConcurrentHashMap<Integer, Reservation> activeReservations;
-    private ConcurrentHashMap<Integer, Reservation> inactiveReservations;
+    private ConcurrentHashMap<Integer, Reservation> allReservations;
     private Vector<Billing> paymentHistory;
     //likely there needs to be a change of these from Vector to
     //HashSets for better look up times
@@ -30,8 +30,7 @@ public class HotelManagement {
     }
 
     private HotelManagement() {
-        this.activeReservations = ReservationLoader.loadReservations(ReservationLoader.Status.ACTIVE);
-        this.inactiveReservations = ReservationLoader.loadReservations(ReservationLoader.Status.INACTIVE);
+        this.allReservations = ReservationLoader.loadReservations();
         this.paymentHistory = new Vector<>();
         this.accounts = UserLoader.loadUsers();
         this.rooms = RoomLoader.loadRooms();
@@ -48,10 +47,10 @@ public class HotelManagement {
             boolean roomAvailable = true;
             for(Integer res: r.getReservations()) {
                 if(end.after(start)) {
-                    if(start.before(activeReservations.get(res).getStart()))
-                        if(end.after(activeReservations.get(res).getStart()))
+                    if(start.before(allReservations.get(res).getStart()))
+                        if(end.after(allReservations.get(res).getStart()))
                             roomAvailable = false;
-                    else if(start.before(activeReservations.get(res).getEnd()))
+                    else if(start.before(allReservations.get(res).getEnd()))
                         roomAvailable = false;
                 }
                 else 
@@ -64,7 +63,7 @@ public class HotelManagement {
     }
     
     public void addReservation(Reservation res, Guest g, int[] room) {
-        activeReservations.put(res.getID(), res);
+        allReservations.put(res.getID(), res);
         //loop thru reservation's rooms. Will typically be 1 room
         for(int j = 0; j < room.length; j++) {
         	//loop thru hotel's rooms to see which room object it is so that
@@ -76,7 +75,7 @@ public class HotelManagement {
             }
         }
         g.addReservation(res.getID());
-        ReservationLoader.saveReservations(activeReservations.values().stream().collect(Collectors.toSet()), ReservationLoader.Status.ACTIVE);
+        ReservationLoader.saveReservations(allReservations.values().stream().toList());
     }
     
     public Vector<Room> getRooms(){
@@ -96,11 +95,11 @@ public class HotelManagement {
     }
 
     public void checkIn(int reserveID){
-        this.activeReservations.get(reserveID).setCheckedIn(true);
+        this.allReservations.get(reserveID).setCheckedIn(true);
     }
     public void checkOut(int reserveID){
-        this.inactiveReservations.put(reserveID, this.activeReservations.get(reserveID));
-        this.activeReservations.remove(reserveID);
+        /*this.inactiveReservations.put(reserveID, this.allReservations.get(reserveID));
+        this.allReservations.remove(reserveID);*/
     }
     public Account logIn(String username, String password) {
         //query data base, will be added soon,
@@ -121,11 +120,26 @@ public class HotelManagement {
         if(!accounts.containsKey(username)) {
             Account acc = new Account(username, password);
             accounts.put(username, acc);
-            AccountList accountList = new AccountList();
-            accountList.setAccountsList(accounts.values().stream().collect(Collectors.toList()));
-            UserLoader.saveUsers(accountList);
+            UserLoader.saveUsers(accounts.values().stream().toList());
             return acc;
         }
         return null;
+    }
+
+    private void loadUsers() {
+        try {
+            List<Account> users = XMLParser.load("users.xml", XMLList.class, Account.class, Guest.class, Clerk.class, Admin.class);
+            this.accounts = new ConcurrentHashMap<>();
+            for(Account account : users) {
+                this.accounts.put(account.getUsername(), account);
+            }
+        } catch (FileNotFoundException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void saveUsers() {
+        List<Account> a = this.accounts.values().stream().collect(Collectors.toList());
+        XMLParser.save(a, "users.xml", XMLList.class, Account.class, Guest.class, Clerk.class, Admin.class);
     }
 }
